--- a/DlgConfiguration.ui
+++ b/DlgConfiguration.ui
@@ -74,7 +74,11 @@
            </spacer>
           </item>
           <item row="1" column="2">
-           <widget class="QSpinBox" name="spnPort"/>
+           <widget class="QSpinBox" name="spnPort">
+            <property name="maximum">
+             <number>99999</number>
+            </property>
+           </widget>
           </item>
           <item row="2" column="2">
            <widget class="QPushButton" name="pushButton">
@@ -144,30 +148,6 @@
           </item>
          </layout>
         </widget>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <spacer name="horizontalSpacer_3">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <widget class="QPushButton" name="pbtnReset">
-           <property name="text">
-            <string>Reset Settings...</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
        </item>
       </layout>
      </widget>
