--- a/WndMain.ui
+++ b/WndMain.ui
@@ -14,7 +14,7 @@
    <string>WndMain</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,1,0,0" columnstretch="1,1,1" rowminimumheight="0,0,200,0,0" columnminimumwidth="0,200,0">
+   <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,1,0" columnstretch="1,1,1">
     <item row="2" column="1">
      <widget class="MeasureDisplay" name="wgMeasureDisplay" native="true"/>
     </item>
@@ -164,13 +164,6 @@
        </size>
       </property>
      </spacer>
-    </item>
-    <item row="4" column="1">
-     <widget class="QSlider" name="horizontalSlider">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
     </item>
    </layout>
   </widget>
