Added PhaseImageMap class and got sunset-sundown and location APIs working.

--- a/WndMain.ui
+++ b/WndMain.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>WndMain</string>
+   <string>rpiweatherd-qtclient</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,1,0" columnstretch="1,1,1">
