--- a/DlgConfiguration.ui
+++ b/DlgConfiguration.ui
@@ -81,7 +81,7 @@
            </widget>
           </item>
           <item row="2" column="2">
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="pbtnTestConnection">
             <property name="text">
              <string>Test Connection...</string>
             </property>
